Finish Project 3 Website

--- a/Project1RGB/index.html
+++ b/Project1RGB/index.html
@@ -46,7 +46,7 @@
 
 <body>
   <hr>
-  <h1 align="middle">CS 180: Computer Graphics and Imaging, Fall 2024</h1>
+  <h1 align="middle">CS 180: Computer Vision and Computational Photography, Fall 2024</h1>
   <h1 align="middle">Project 1: Images of the Russian Empire in RGB</h1>
   <h2 align="middle">Zackary Oon</h2>
   <hr>
