--- a/Project2Filters/index.html
+++ b/Project2Filters/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <hr>
-<h1>CS 180: Computer Graphics and Imaging, Fall 2024</h1>
+<h1>CS 180: Computer Vision and Computational Photography, Fall 2024</h1>
 <h1>Project 2: Fun with Filters and Frequencies!</h1>
 <h2>Zackary Oon</h2>
 <hr>
