add labeling tool blurb

--- a/Project3FaceMorph/index.html
+++ b/Project3FaceMorph/index.html
@@ -60,6 +60,7 @@
 <blockquote>
   The first step to a successful morph is a successful warp. To do this, we must define key corresponding points
   between each face. This is to mark where in each image the eyes are for each person, the ears, the lips, the eyebrows, etc.
+  This is done using the <a href="https://cal-cs180.github.io/fa23/hw/proj3/tool.html">labeling tool provided to us here.</a>
   <br><br>
   The correspondences shown below are the average positions between my "key points" and Jackie Chan's "key points". 
   This is so that both images morph towards a "middle" image. With these correspondences now defined, we perform Delaunay Triangulation
